--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "start": "node dist/index.js",
     "watch": "tsc --watch"
   },
-  "keywords": ["mcp", "cosmos", "blockchain", "manifest"],
+  "keywords": [
+    "mcp",
+    "cosmos",
+    "blockchain",
+    "manifest"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.3.0"
+    "@modelcontextprotocol/sdk": "^1.3.0",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
